fixed dark mode on home page and rearranged components

--- a/src/App.css
+++ b/src/App.css
@@ -29,5 +29,4 @@
 * {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
-  -webkit-user-select: none;
 }
